{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player1",
            "id": "f296e74a-fec4-40e1-9dc7-51981ff11d13",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "6a0d959f-02e8-4e5b-82f8-c857fd407982",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "893e582c-98d4-4976-8c7f-cd9f7231f333",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4b741db8-127b-4c9f-b3ac-3608968050b2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fb4715df-ae10-4ff5-911d-756c48535c0a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "b7cbbfab-d1ee-422e-9db5-889b3b24b1a6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "86ff01d0-c809-4d19-bde7-9e3a72d88143",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0d3dd011-2fcb-456d-9b99-c3d18280556e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5df3bc06-3f9e-4be4-9584-b1f782fab862",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2ff7c5be-de25-4c78-b0a1-e4c2c3f97da4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}